syntax = "proto3";

package auth;

//AuthService
service AuthService {
  rpc Login (AuthRequest) returns (Authorization) {};
}

message AuthRequest {
    string login = 1;
    string password = 2;
}

message Authorization {
    string accessToken = 1;
    string refreshToken = 2;
}